--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -265,6 +265,9 @@
             <trans-unit id="tx_cart_domain_model_order_address.street_number">
                 <source>Street Number</source>
             </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_address.addition">
+                <source>Addition</source>
+            </trans-unit>
             <trans-unit id="tx_cart_domain_model_order_address.zip">
                 <source>Zip</source>
             </trans-unit>
