--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-    <file source-language="en" target-language="de" datatype="plaintext" original="messages" date="2021-06-10T23:58:00Z" product-name="cart">
+    <file source-language="en" target-language="de" datatype="plaintext" original="messages" date="2022-05-31T19:53:00Z" product-name="cart">
         <header/>
         <body>
 
@@ -732,6 +732,14 @@
             <trans-unit id="tx_cart_domain_model_coupon.coupon_type.cartdiscount">
                 <source>Cart Discount</source>
                 <target>Rabatt auf den Warenkorb</target>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_coupon.coupon_type.cartdiscount.fix">
+                <source>Cart Discount (fix)</source>
+                <target>Rabatt auf den Warenkorb (fest)</target>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_coupon.coupon_type.cartdiscount.percentage">
+                <source>Cart Discount (percentage)</source>
+                <target>Rabatt auf den Warenkorb (prozentual)</target>
             </trans-unit>
             <trans-unit id="tx_cart_domain_model_coupon.is_relative_discount">
                 <source>Is Relative Discount</source>
